updates to current status

--- a/01-intro-and-data-sources/[2025]_Module_01_Colab_Introduction_and_Data_Sources.ipynb
+++ b/01-intro-and-data-sources/[2025]_Module_01_Colab_Introduction_and_Data_Sources.ipynb
@@ -10664,7 +10664,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 201,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -10709,6 +10709,17 @@
             "74 2000-07-26          6.20   -16.811093\n",
             "85 1997-07-10         13.33   -16.666535\n",
             "72 2001-01-30          2.57   -14.191417\n"
+          ]
+        },
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+            "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+            "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+            "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
           ]
         }
       ],
