Re-add Module 2 notebook after filter-repo cleanup

--- a/02-dataframe-analysis/[2025]_Module_02_Working_with_the_data.ipynb
+++ b/02-dataframe-analysis/[2025]_Module_02_Working_with_the_data.ipynb
@@ -5,8 +5,9 @@
    "id": "76e5e35d",
    "metadata": {},
    "source": [
-    "# %% [markdown]\n",
-    "# ### Question 1: [IPO] Withdrawn IPOs by Company Type\n",
+    "\n",
+    "**Question 1: [IPO] Withdrawn IPOs by Company Type**\n",
+    "\n",
     "# \n",
     "# **What is the total withdrawn IPO value (in $ millions) for the company class with the highest total withdrawal value?**\n",
     "# \n",
@@ -80,9 +81,8 @@
    "id": "184895e9",
    "metadata": {},
    "source": [
-    " ### Question 2:   [IPO] Median Sharpe Ratio for 2024 IPOs (First 5 Months)\n",
-    "# \n",
-    "# \n",
+    "**Question 2:   [IPO] Median Sharpe Ratio for 2024 IPOs (First 5 Months)*\n",
+    "\n",
     "# **What is the median Sharpe ratio (as of 6 June 2025) for companies that went public in the first 5 months of 2024?**\n",
     "# \n",
     "# The goal is to replicate the large-scale `yfinance` OHLCV data download and perform basic financial calculations on IPO stocks.\n",
@@ -549,20 +549,20 @@
    "id": "87ed4216",
    "metadata": {},
    "source": [
-    "# ### Question 3: [IPO] ‘Fixed Months Holding Strategy’\n",
+    "**Question 3: [IPO] ‘Fixed Months Holding Strategy’*\n",
     "# \n",
-    "# **What is the optimal number of months (1 to 12) to hold a newly IPO'd stock in order to maximize average growth?**  \n",
+    "**What is the optimal number of months (1 to 12) to hold a newly IPO'd stock in order to maximize average growth?*\n",
     "# (*Assume you buy at the close of the first trading day and sell after a fixed number of trading days.*)\n",
     "# \n",
     "# \n",
     "# ---\n",
     "# \n",
-    "# #### Goal:\n",
+    " Goal:\n",
     "# Investigate whether holding an IPO stock for a fixed number of months after its first trading day produces better returns, using future growth columns.\n",
     "# \n",
     "# ---\n",
     "# \n",
-    "# #### Steps:\n",
+    "*Steps:\n",
     "# \n",
     "# 1. **Start from the existing DataFrame** from Question 2 (75 tickers from IPOs in the first 5 months of 2024).  \n",
     "# \n",
@@ -675,7 +675,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# ### Question 4: [Strategy] Simple RSI-Based Trading Strategy\n",
+    "**Question 4: [Strategy] Simple RSI-Based Trading Strategy*\n",
     "# \n",
     "# \n",
     "# **What is the total profit (in $thousands) you would have earned by investing $1000 every time a stock was oversold (RSI < 25)?**\n",
@@ -948,7 +948,7 @@
    "source": [
     "\n",
     "\n",
-    "# Question 5. Q5. [Exploratory, Optional] Predicting a Positive-Return IPO (1 point)\n",
+    "** Question 5. Q5. [Exploratory, Optional] Predicting a Positive-Return IPO (1 point)*\n",
     "\n",
     "\n",
     "# To predict whether an IPO will yield a positive 1-year return, we can use a combination of price-based, company-level, technical, and macroeconomic features. Early performance indicators like first-day return, short-term volatility, and momentum (e.g., 30-day or 90-day growth) offer strong signals. Metadata such as the sector, IPO month, and exchange listing may capture structural or seasonal patterns. Technical indicators like RSI, MACD, and moving average crossovers help identify early price momentum or reversals. Finally, market conditions—such as S&P 500 trends, VIX levels, or interest rates—provide useful context about the broader economic environment at IPO time.\n",
