Re-add Module 2 notebook after filter-repo markdown hashtag cleanup

--- a/02-dataframe-analysis/[2025]_Module_02_Working_with_the_data.ipynb
+++ b/02-dataframe-analysis/[2025]_Module_02_Working_with_the_data.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "**What is the total withdrawn IPO value (in $ millions) for the company class with the highest total withdrawal value?**\n",
     "\n",
-    "#From the withdrawn IPO list ([stockanalysis.com/ipos/withdrawn](https://stockanalysis.com/ipos/withdrawn/)), collect and process the data to find out which company type saw the most withdrawn IPO value.\n",
+    "From the withdrawn IPO list ([stockanalysis.com/ipos/withdrawn](https://stockanalysis.com/ipos/withdrawn/)), collect and process the data to find out which company type saw the most withdrawn IPO value.\n",
     "\n",
     "Steps:\n",
     "1. Use pandas.read_html() with the URL above to load the IPO withdrawal table into a DataFrame. \n",
@@ -81,49 +81,47 @@
    "source": [
     "**Question 2:   [IPO] Median Sharpe Ratio for 2024 IPOs (First 5 Months)*\n",
     "\n",
-    "# **What is the median Sharpe ratio (as of 6 June 2025) for companies that went public in the first 5 months of 2024?**\n",
-    "# \n",
-    "# The goal is to replicate the large-scale `yfinance` OHLCV data download and perform basic financial calculations on IPO stocks.\n",
-    "# \n",
-    "# \n",
-    "# #### Steps:\n",
-    "# \n",
-    "# 1. Using the same approach as in Question 1, download the IPOs in 2024 from:  \n",
-    "#    [https://stockanalysis.com/ipos/2024/](https://stockanalysis.com/ipos/2024/)  \n",
-    "#    Filter to keep only those IPOs **before 1 June 2024** (first 5 months of 2024).  \n",
-    "#    ➤ You should have **75 tickers**.\n",
-    "# \n",
-    "# 2.  Use **Code Snippet 7** to download daily stock data for those tickers (via `yfinance`).  \n",
-    "#    Make sure you understand how `growth_1d` ... `growth_365d`, and volatility columns are defined.  \n",
-    "#    Define a new column `growth_252d` representing growth after **252 trading days** (~1 year), in addition to any other growth periods you already track.\n",
-    "# \n",
-    "# \n",
-    "# 3. Calculate the Sharpe ratio assuming a risk-free rate of **4.5%**:\n",
-    "# \n",
-    "#    ```python\n",
-    "#    stocks_df['Sharpe'] = (stocks_df['growth_252d'] - 0.045) / stocks_df['volatility']\n",
-    "#    ```\n",
-    "# \n",
-    "#    ⚠️ **IMPORTANT** Please use the original version of annualized volatility calculation (it was later corrected to another formula):\n",
-    "#    ```python\n",
-    "#    stocks_df['volatility'] =   stocks_df['Close'].rolling(30).std() * np.sqrt(252)\n",
-    "#    ```\n",
-    "# 4. Filter the DataFrame to keep data only for the trading day:  \n",
-    "#    **‘2025-06-06’**\n",
-    "# \n",
-    "#    Compute descriptive statistics (e.g., `.describe()`) for these columns:  \n",
-    "#    - `growth_252d`  \n",
-    "#    - `Sharpe`\n",
-    "# \n",
-    "#    You should observe:  \n",
-    "#    - `growth_252d` is defined for **71 out of 75 stocks** (some IPOs are too recent or data starts later).  \n",
-    "#    - Median `growth_252d` is approximately **0.75** (indicating a 25% decline), while mean is about **1.15**, showing a bias towards high-growth companies pushing the average up.\n",
-    "# \n",
-    "# 5. **Answer:**  \n",
-    "#    - What is the **median Sharpe ratio** for these 71 stocks?  \n",
-    "#    - Note: Positive `Sharpe` means growth exceeding the risk-free rate of 4.5%.  \n",
-    "#    - [Additional] Do you observe the **same top 10 companies** when sorting by `growth_252d` versus sorting by `Sharpe`?\n",
-    "# \n"
+    "**What is the median Sharpe ratio (as of 6 June 2025) for companies that went public in the first 5 months of 2024?**\n",
+    "\n",
+    "The goal is to replicate the large-scale `yfinance` OHLCV data download and perform basic financial calculations on IPO stocks.\n",
+    "\n",
+    "Steps:\n",
+    "\n",
+    "1. Using the same approach as in Question 1, download the IPOs in 2024 from:  \n",
+    " [https://stockanalysis.com/ipos/2024/](https://stockanalysis.com/ipos/2024/)  \n",
+    "Filter to keep only those IPOs **before 1 June 2024** (first 5 months of 2024).  \n",
+    "➤ You should have **75 tickers**.\n",
+    "\n",
+    "2.  Use **Code Snippet 7** to download daily stock data for those tickers (via `yfinance`).  \n",
+    "Make sure you understand how `growth_1d` ... `growth_365d`, and volatility columns are defined.  \n",
+    "Define a new column `growth_252d` representing growth after **252 trading days** (~1 year), in addition to any other growth periods you already track.\n",
+    "\n",
+    "3. Calculate the Sharpe ratio assuming a risk-free rate of **4.5%**:\n",
+    "\n",
+    "```python\n",
+    "stocks_df['Sharpe'] = (stocks_df['growth_252d'] - 0.045) / stocks_df['volatility']\n",
+    "```\n",
+    "\n",
+    "⚠️ **IMPORTANT** Please use the original version of annualized volatility calculation (it was later corrected to another formula):\n",
+    "```python\n",
+    "stocks_df['volatility'] =   stocks_df['Close'].rolling(30).std() * np.sqrt(252)\n",
+    "  ```\n",
+    "4. Filter the DataFrame to keep data only for the trading day:  \n",
+    " **‘2025-06-06’**\n",
+    "\n",
+    " Compute descriptive statistics (e.g., `.describe()`) for these columns:  \n",
+    "- `growth_252d`  \n",
+    "_ `Sharpe`\n",
+    "\n",
+    "You should observe:  \n",
+    "- `growth_252d` is defined for **71 out of 75 stocks** (some IPOs are too recent or data starts later).  \n",
+    "- Median `growth_252d` is approximately **0.75** (indicating a 25% decline), while mean is about **1.15**, showing a bias towards high-growth companies pushing the average up.\n",
+    "\n",
+    "5. **Answer:**  \n",
+    "- What is the **median Sharpe ratio** for these 71 stocks?  \n",
+    "- Note: Positive `Sharpe` means growth exceeding the risk-free rate of 4.5%.  \n",
+    "- [Additional] Do you observe the **same top 10 companies** when sorting by `growth_252d` versus sorting by `Sharpe`?\n",
+    "\n"
    ]
   },
   {
@@ -548,45 +546,40 @@
    "metadata": {},
    "source": [
     "**Question 3: [IPO] ‘Fixed Months Holding Strategy’*\n",
-    "# \n",
+    "\n",
     "**What is the optimal number of months (1 to 12) to hold a newly IPO'd stock in order to maximize average growth?*\n",
-    "# (*Assume you buy at the close of the first trading day and sell after a fixed number of trading days.*)\n",
-    "# \n",
-    "# \n",
-    "# ---\n",
-    "# \n",
+    "(*Assume you buy at the close of the first trading day and sell after a fixed number of trading days.*)\n",
+    "\n",
     " Goal:\n",
-    "# Investigate whether holding an IPO stock for a fixed number of months after its first trading day produces better returns, using future growth columns.\n",
-    "# \n",
-    "# ---\n",
-    "# \n",
+    "Investigate whether holding an IPO stock for a fixed number of months after its first trading day produces better returns, using future growth columns.\n",
+    "---\n",
+    "\n",
     "*Steps:\n",
-    "# \n",
-    "# 1. **Start from the existing DataFrame** from Question 2 (75 tickers from IPOs in the first 5 months of 2024).  \n",
-    "# \n",
-    "#    Add **12 new columns**:  \n",
-    "#    `future_growth_1m`, `future_growth_2m`, ..., `future_growth_12m`  \n",
-    "#    *(Assume 1 month = 21 trading days, so growth is calculated over 21, 42, ..., 252 trading days)*  \n",
-    "#    This logic is similar to `historyPrices['growth_future_30d']` from **Code Snippet 7**, but extended to longer timeframes.\n",
-    "# \n",
-    "# 2. **Determine the first trading day** (`min_date`) for each ticker.  \n",
-    "#    This is the earliest date in the data for each stock.\n",
-    "# \n",
-    "# 3. **Join the data**:  \n",
-    "#    Perform an **inner join** between the `min_date` DataFrame and the future growth data on both `ticker` and `date`.  \n",
-    "#    ➤ You should end up with **75 records** (one per IPO) with all 12 `future_growth_...` fields populated.\n",
-    "# \n",
-    "# 4. **Compute descriptive statistics** for the resulting DataFrame:  \n",
-    "#    Use `.describe()` or similar to analyze each of the 12 columns:  \n",
-    "#    - `future_growth_1m`  \n",
-    "#    - `future_growth_2m`  \n",
-    "#    - ...  \n",
-    "#    - `future_growth_12m`  \n",
-    "# \n",
-    "# 5. **Determine the best holding period**:  \n",
-    "#    - Find the number of months **(1 to 12)** where the **average (mean)** future growth is **maximal**.  \n",
-    "#    - This optimal month shows an uplift of **>1%** compared to all others.  \n",
-    "#    - Still, the average return remains **less than 1** (i.e., expected return is less than doubling your investment).\n"
+    "1. **Start from the existing DataFrame** from Question 2 (75 tickers from IPOs in the first 5 months of 2024).  \n",
+    "\n",
+    "Add **12 new columns**:  \n",
+    "`future_growth_1m`, `future_growth_2m`, ..., `future_growth_12m`  \n",
+    "*(Assume 1 month = 21 trading days, so growth is calculated over 21, 42, ..., 252 trading days)*  \n",
+    "This logic is similar to `historyPrices['growth_future_30d']` from **Code Snippet 7**, but extended to longer timeframes.\n",
+    "\n",
+    "2. **Determine the first trading day** (`min_date`) for each ticker.  \n",
+    " This is the earliest date in the data for each stock.\n",
+    "\n",
+    "3. **Join the data**:  \n",
+    "Perform an **inner join** between the `min_date` DataFrame and the future growth data on both `ticker` and `date`.  \n",
+    "➤ You should end up with **75 records** (one per IPO) with all 12 `future_growth_...` fields populated.\n",
+    "\n",
+    "4. **Compute descriptive statistics** for the resulting DataFrame:  \n",
+    "Use `.describe()` or similar to analyze each of the 12 columns:  \n",
+    "- `future_growth_1m`  \n",
+    "- `future_growth_2m`  \n",
+    "- ...  \n",
+    "- `future_growth_12m`  \n",
+    "\n",
+    "5. **Determine the best holding period**:  \n",
+    "- Find the number of months **(1 to 12)** where the **average (mean)** future growth is **maximal**.  \n",
+    "- This optimal month shows an uplift of **>1%** compared to all others.  \n",
+    "- Still, the average return remains **less than 1** (i.e., expected return is less than doubling your investment).\n"
    ]
   },
   {
@@ -674,45 +667,40 @@
    "source": [
     "\n",
     "**Question 4: [Strategy] Simple RSI-Based Trading Strategy*\n",
-    "# \n",
-    "# \n",
-    "# **What is the total profit (in $thousands) you would have earned by investing $1000 every time a stock was oversold (RSI < 25)?**\n",
-    "# \n",
-    "# \n",
-    "# ---\n",
-    "# \n",
-    "# #### Goal:\n",
-    "# Apply a simple rule-based trading strategy using the **Relative Strength Index (RSI)** technical indicator to identify oversold signals and calculate profits.\n",
-    "# \n",
-    "# ---\n",
-    "# \n",
-    "# \n",
-    "# #### Steps:\n",
-    "# \n",
-    "# 1. **Run the full notebook from Lecture 2 (33 stocks)**  \n",
-    "#    - Ensure you can generate the merged DataFrame containing:  \n",
-    "#      - OHLCV data  \n",
-    "#      - Technical indicators  \n",
-    "#      - Macro indicators  \n",
-    "#    - Focus on getting **RSI** computed using **Code Snippets 8 and 9**.  \n",
-    "#    - This process is essential and will help during the capstone project.\n",
-    "# \n",
-    "# 2. ⚠️ **IMPORTANT** Please use this file to solve the Home Assignment (**all next steps**)\n",
-    "#  \n",
-    "#    Download precomputed data using this snippet:\n",
-    "# \n",
-    "#    ```python\n",
+    "\n",
+    "\n",
+    "**What is the total profit (in $thousands) you would have earned by investing $1000 every time a stock was oversold (RSI < 25)?**\n",
+    " ---\n",
+    "\n",
+    "Goal:\n",
+    "Apply a simple rule-based trading strategy using the **Relative Strength Index (RSI)** technical indicator to identify oversold signals and calculate profits.\n",
+    "---\n",
+    "Steps:\n",
+    "\n",
+    "1. **Run the full notebook from Lecture 2 (33 stocks)**  \n",
+    "- Ensure you can generate the merged DataFrame containing:  \n",
+    "- OHLCV data  \n",
+    "- Technical indicators  \n",
+    "- Macro indicators  \n",
+    "- Focus on getting **RSI** computed using **Code Snippets 8 and 9**.  \n",
+    "- This process is essential and will help during the capstone project.\n",
+    "\n",
+    "2. ⚠️ **IMPORTANT** Please use this file to solve the Home Assignment (**all next steps**)\n",
+    "\n",
+    "Download precomputed data using this snippet:\n",
+    "\n",
+    "```python\n",
     "#    import gdown\n",
     "#    import pandas as pd\n",
     "# \n",
     "#    file_id = \"1grCTCzMZKY5sJRtdbLVCXg8JXA8VPyg-\"\n",
     "#    gdown.download(f\"https://drive.google.com/uc?id={file_id}\", \"data.parquet\", quiet=False)\n",
     "#    df = pd.read_parquet(\"data.parquet\", engine=\"pyarrow\")\n",
-    "# \n",
+    "\n",
     "# 3. **RSI Strategy Setup:**  \n",
     "#    - RSI is already available in the dataset as a field.  \n",
     "#    - The threshold for **oversold** is defined as `RSI < 25`.\n",
-    "# \n",
+    "\n",
     "# 4. **Filter the dataset by RSI and date:**  \n",
     "#    ```python\n",
     "#    rsi_threshold = 25\n",
@@ -728,10 +716,8 @@
     "#      ```python\n",
     "#      net_income = 1000 * (selected_df['growth_future_30d'] - 1).sum()\n",
     "#      ```\n",
-    "# \n",
     "#    - **Final Answer:**  \n",
-    "#      What is the **net income in $K** (i.e., in thousands of dollars) that could be earned using this RSI-based oversold strategy from 2000–2025?\n",
-    "#"
+    "#      What is the **net income in $K** (i.e., in thousands of dollars) that could be earned using this RSI-based oversold strategy from 2000–2025?\n"
    ]
   },
   {
@@ -946,7 +932,7 @@
    "source": [
     "\n",
     "\n",
-    "** Question 5. Q5. [Exploratory, Optional] Predicting a Positive-Return IPO (1 point)*\n",
+    "# Question 5. Q5. [Exploratory, Optional] Predicting a Positive-Return IPO (1 point)*\n",
     "\n",
     "\n",
     "# To predict whether an IPO will yield a positive 1-year return, we can use a combination of price-based, company-level, technical, and macroeconomic features. Early performance indicators like first-day return, short-term volatility, and momentum (e.g., 30-day or 90-day growth) offer strong signals. Metadata such as the sector, IPO month, and exchange listing may capture structural or seasonal patterns. Technical indicators like RSI, MACD, and moving average crossovers help identify early price momentum or reversals. Finally, market conditions—such as S&P 500 trends, VIX levels, or interest rates—provide useful context about the broader economic environment at IPO time.\n",
